# LowLevelGameEngine

./: .gitignore  CMakeLists.txt  ModuleCommon.cmake  README.md  Resources.cmake
componentExample/: CMakeLists.txt  README.md
componentExample/include/: componentExample.h
componentExample/src/: componentExample.cpp
core/: CMakeLists.txt  README.md
core/include/: core.h
core/src/: core.cpp
engineRuntime/: CMakeLists.txt
engineRuntime/src/: main.cpp
fileManipulation/: CMakeLists.txt  README.md
fileManipulation/include/: fileManipulation.h
fileManipulation/src/: standardLibBackend.cpp  windowsBackend.cpp
fmt/: CMakeLists.txt  README.md
gameObject/src/: component.cpp  component.h  gameObject.cpp  gameObject.h  uuid.h
gameObject/src/components/: transform.cpp  transform.h
logger/: CMakeLists.txt  README.md
logging/: CMakeLists.txt  README.md
logging/include/: logColors.h  logSeverity.h  logging.h  readyLogs.h
logging/src/: logColors.cpp  logging.cpp
math/: CMakeLists.txt  README.md
math/include/: llm.h
math/src/: llm.cpp
moduleExample/: CMakeLists.txt  README.md
moduleExample/include/: moduleExample.h
moduleExample/src/: moduleExample.cpp
resources/: logs.txt
stringManipulation/: CMakeLists.txt  README.md
stringManipulation/include/: stringManipulation.h
stringManipulation/src/: stringManipulation.cpp
testing/: CMakeLists.txt
testing/include/: fileManipulationTest.h  stringManipulation.h  testing.h
testing/src/: testing.cpp
testsFolder/: fileManip.txt
window/: CMakeLists.txt  README.md
window/include/: window.h
window/src/: glfwBackend.cpp  windowsBackend.cpp
